<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="default_content_description">Content Description</string>

    <!-- Login activity-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>

    <!-- Home fragment -->
    <string name="fragment_home_welcome">\t\tHi guys, we\'re glad you tried this app. We hope it brings you a lot of experience!</string>
    <string name="fragment_home_logo_description">logo</string>
    <string name="fragment_home_made_by">Made by:</string>
    <string name="company">INFOTECH, s.r.o.</string>

    <!-- Actors fragment -->
    <string name="actors_pager_all">Actors</string>
    <string name="actors_pager_men">Men</string>
    <string name="actors_pager_women">Woman</string>
    <string name="actor_dob">"B'day: "</string>
    <string name="actor_height">"Height: "</string>
    <string name="actor_spouse">"Spouse: "</string>
    <string name="actor_children">"Children: "</string>

    <!-- Menu items title -->
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_actors">Actors</string>
    <string name="title_wiki">Wikipedia</string>
    <string name="title_settings">Settings</string>
    <string name="title_logout">Log out</string>

    <!-- Error strings -->
    <string name="error_required_field">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_short_password">Password is too short</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_actor">Actors</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
