<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
              android:icon="@drawable/ic_menu_home"
              android:title="@string/title_home"
              android:checked="true"/>
        <item android:id="@+id/nav_actors"
              android:icon="@drawable/ic_menu_actors"
              android:title="@string/title_actors" />
        <item android:id="@+id/nav_map"
              android:icon="@drawable/ic_menu_map"
              android:title="@string/title_map" />
        <item android:id="@+id/nav_settings"
              android:icon="@android:drawable/ic_menu_manage"
              android:title="@string/title_settings" />
        <item android:id="@+id/nav_logout"
              android:icon="@drawable/ic_menu_logout"
              android:title="@string/title_logout" />
    </group>

</menu>
